--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p>Furnitures<br />sold</p>
           </div>
         </div>
-        <a href="/pages/about/about.html">
+        <a href="pages/about/about.html">
         <button>Know more</button>
       </a>
       </div>
