--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -14,16 +14,16 @@
     <nav>
       <ul class="nav__links">
         <li class="link"><a href="#">ABOUT</a></li>
-        <li class="link"><a href="/pages/project/project.html">PROJECTS</a></li>
+        <li class="link"><a href="pages/project/project.html">PROJECTS</a></li>
         <li class="nav__logo">
           <div class="logoo">
-            <a href="/index.html">
-              <img src="/assets/logo.png" alt="logo" />
+            <a href="index.html">
+              <img src="assets/logo.png" alt="logo" />
             </a>
           </div>
           <h4>Shabbu Furniture Art</h4>
         </li>
-        <li class="link"><a href="/pages/service/service.html">SERVICES</a></li>
+        <li class="link"><a href="pages/service/service.html">SERVICES</a></li>
         <li class="link"><a href="#">CONTACT</a></li>
       </ul>
     </nav>
