--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -18,7 +18,7 @@
         <li class="nav__logo">
           <div class="logoo">
             <a href="index.html">
-              <img src="assets/logo.png" alt="logo" />
+              <img src="/assets/logo.png" alt="logo" />
             </a>
           </div>
           <h4>Shabbu Furniture Art</h4>
