--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Shabbu Furniture Art</title>
   </head>
   <body>
