--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <h4>Shabbu Furniture Art</h4>
         </li>
-        <li class="link"><a href="pages/service/services.html">SERVICES</a></li>
+        <li class="link"><a href="pages/services/services.html">SERVICES</a></li>
         <li class="link"><a href="#">CONTACT</a></li>
       </ul>
     </nav>
