--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     <nav>
       <ul class="nav__links">
-        <li class="link"><a href="/pages/about/about.html">ABOUT</a></li>
-        <li class="link"><a href="/pages/project/project.html">PROJECTS</a></li>
+        <li class="link"><a href="pages/about/about.html">ABOUT</a></li>
+        <li class="link"><a href="pages/services/services.html">SERVICES</a></li>
         <li class="nav__logo">
           <div class="logoo">
             <img src="assets/logo.png" alt="logo" />
           </div>
           <h4>Shabbu Furniture Art</h4>
         </li>
-        <li class="link"><a href="pages/services/services.html">SERVICES</a></li>
+        <li class="link"><a href="pages/projects/projects.html">PROJECTS</a></li>
         <li class="link"><a href="#">CONTACT</a></li>
       </ul>
     </nav>
