--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -14,7 +14,7 @@
     <nav>
       <ul class="nav__links">
         <li class="link"><a href="#">ABOUT</a></li>
-        <li class="link"><a href="pages/project/project.html">PROJECTS</a></li>
+        <li class="link"><a href="pages/projects/projects.html">PROJECTS</a></li>
         <li class="nav__logo">
           <div class="logoo">
             <a href="index.html">
@@ -23,7 +23,7 @@
           </div>
           <h4>Shabbu Furniture Art</h4>
         </li>
-        <li class="link"><a href="pages/service/service.html">SERVICES</a></li>
+        <li class="link"><a href="pages/services/services.html">SERVICES</a></li>
         <li class="link"><a href="#">CONTACT</a></li>
       </ul>
     </nav>
